--- a/app/src/main/res/layout/activity_display_packs.xml
+++ b/app/src/main/res/layout/activity_display_packs.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pack_name"
-        android:layout_width="409dp"
-        android:layout_height="431dp"
-        android:layout_marginTop="300dp"
+        android:id="@+id/pack_display_rv"
+        android:layout_width="410dp"
+        android:layout_height="732dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
