--- a/app/src/main/res/layout/display_pack_recyclerview.xml
+++ b/app/src/main/res/layout/display_pack_recyclerview.xml
@@ -15,8 +15,8 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/pack_name"
-        android:layout_width="97dp"
+        android:id="@+id/pack_display_rv"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/pack_name" />
 </LinearLayout>
