--- a/app/src/main/res/layout/fragment_activity_list.xml
+++ b/app/src/main/res/layout/fragment_activity_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pack_display_rv"
+        android:id="@+id/activity_list_rv"
         android:layout_width="410dp"
         android:layout_height="732dp"
         app:layout_constraintStart_toStartOf="parent"
