--- a/app/src/main/res/layout/display_activities_recyclerview.xml
+++ b/app/src/main/res/layout/display_activities_recyclerview.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/activities_recycler_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/activities_recycler_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="50sp">
 
     <ImageButton
         android:id="@+id/activities_recycler_activity_image"
-        android:layout_width="101dp"
-        android:layout_height="100dp"
+        android:layout_width="138dp"
+        android:layout_height="122dp"
+        android:layout_marginLeft="50sp"
         android:maxWidth="10dp"
         android:maxHeight="10dp"
         tools:srcCompat="@tools:sample/avatars" />
@@ -18,7 +20,7 @@
         android:id="@+id/activities_recycler_activity_name"
         android:layout_width="107dp"
         android:layout_height="47dp"
-        android:text="activity name"/>
+        android:text="activity name" />
 
     <TextView
         android:id="@+id/activities_recycler_activity_price"
@@ -28,8 +30,8 @@
 
     <TextView
         android:id="@+id/activities_recycler_activity_location"
-        android:layout_width="115dp"
-        android:layout_height="91dp"
+        android:layout_width="match_parent"
+        android:layout_height="107dp"
         android:text="ceci est une addresse d'une taille moyenne" />
 
 
