--- a/app/src/main/res/layout/activity_pack_details.xml
+++ b/app/src/main/res/layout/activity_pack_details.xml
@@ -11,13 +11,15 @@
         android:layout_width="183dp"
         android:layout_height="38dp"
         android:layout_marginStart="112dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:text="@string/pack_name"
         android:textSize="20sp"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="310dp"
         android:layout_height="102dp"
         android:layout_marginStart="44dp"
@@ -29,29 +31,66 @@
             android:id="@+id/pack_details_pack_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="long long long long long long long long long pack description"
+            android:text="@string/pack_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </ScrollView>
 
-    <fragment
-        android:id="@+id/fragment_activity_list"
-        android:name="com.example.packvoyage.activity.ActivityList"
-        android:layout_width="324dp"
-        android:layout_height="392dp"
-        android:layout_marginTop="176dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/pack_details_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="253dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/pack_details_show_accommodations_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/pack_details_show_accommodations_fragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="54dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/scrollView2"
+            />
+
+        <Button
+            android:id="@+id/pack_details_show_activity_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="40dp"
+
+            android:text="@string/pack_details_show_activity_fragment"
+
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/scrollView2"/>
 
     <Button
-        android:id="@+id/pack_details_book_this_pack"
-        android:layout_width="158dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/book_this_pack_button"
+        android:id="@+id/pack_details_show_flights_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/pack_details_show_flights_fragment"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_activity_list" />
+        android:layout_marginStart="155dp"
+        app:layout_constraintTop_toBottomOf="@id/scrollView2"
+        />
+
+    <Button
+            android:id="@+id/pack_details_book_this_pack"
+            android:layout_width="169dp"
+            android:layout_height="54dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="104dp"
+            android:text="@string/book_this_pack_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
