--- a/app/src/main/res/layout/activity_pack_details.xml
+++ b/app/src/main/res/layout/activity_pack_details.xml
@@ -8,9 +8,8 @@
 
     <TextView
         android:id="@+id/pack_details_pack_name"
-        android:layout_width="183dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="112dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:text="@string/pack_name"
         android:textSize="20sp"
@@ -18,79 +17,79 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="310dp"
-        android:layout_height="102dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pack_details_pack_name">
-
-        <TextView
-            android:id="@+id/pack_details_pack_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/pack_description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </ScrollView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/pack_details_fragment_container"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="253dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/pack_details_show_accommodations_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@string/pack_details_show_accommodations_fragment"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="54dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/scrollView2"
-            />
-
-        <Button
-            android:id="@+id/pack_details_show_activity_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="40dp"
-
-            android:text="@string/pack_details_show_activity_fragment"
-
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/scrollView2"/>
-
-    <Button
-        android:id="@+id/pack_details_show_flights_fragment"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/pack_details_show_flights_fragment"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="155dp"
-        app:layout_constraintTop_toBottomOf="@id/scrollView2"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/pack_details_pack_name"
+        android:layout_marginTop="12dp">
 
-    <Button
-            android:id="@+id/pack_details_book_this_pack"
-            android:layout_width="169dp"
-            android:layout_height="54dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="104dp"
-            android:text="@string/book_this_pack_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pack_details_scrollview_constraint_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/pack_details_pack_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pack_description"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/pack_details_fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/pack_details_show_flights_fragment">
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <Button
+                android:id="@+id/pack_details_show_accommodations_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="12dp"
+                android:text="@string/pack_details_show_accommodations_fragment"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/pack_details_show_flights_fragment"
+                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+            <Button
+                android:id="@+id/pack_details_show_activity_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/pack_details_show_activity_fragment"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/pack_details_show_flights_fragment"
+                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+            <Button
+                android:id="@+id/pack_details_show_flights_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                android:text="@string/pack_details_show_flights_fragment"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
+
+            <Button
+                android:id="@+id/pack_details_book_this_pack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/book_this_pack_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="65dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
