--- a/app/src/main/res/layout/fragment_flight_list_of_pack.xml
+++ b/app/src/main/res/layout/fragment_flight_list_of_pack.xml
@@ -7,8 +7,20 @@
     android:layout_height="wrap_content"
     tools:context=".activity.FlightListOfPack">
 
+        <TextView
+            android:id="@+id/flight_details_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/flight_details_title"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
+            android:id="@+id/fragment_flight_details_outward_journey_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -16,8 +28,8 @@
             android:text="@string/flight_details_going"
             android:textColor="#000000"
             android:textSize="20sp"
-            android:id="@+id/fragment_flight_details_outward_journey_title"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/flight_details_title" />
 
         <TextView
             android:id="@+id/fragment_flight_details_outward_journey_details"
@@ -38,7 +50,8 @@
             app:layout_constraintTop_toBottomOf="@id/fragment_flight_details_outward_journey_details"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:id="@+id/fragment_flight_details_homeward_journey_title"/>
+            android:id="@+id/fragment_flight_details_homeward_journey_title"
+            android:layout_marginTop="16dp"/>
 
 
 
@@ -46,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
             android:id="@+id/fragment_flight_details_homeward_journey_details"
             android:text="@string/flight_details_info"
             android:textSize="16sp"
