--- a/app/src/main/res/layout/plane_seats_booking_recyclerview.xml
+++ b/app/src/main/res/layout/plane_seats_booking_recyclerview.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/booking_plane_seat_info"
@@ -11,6 +11,7 @@
         android:padding="5sp"
         android:text="@string/booking_plane_seat_info"
         android:textSize="20sp"
+        android:maxLength="25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -18,7 +19,7 @@
         android:id="@+id/booking_plane_seat_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4sp"
-        app:layout_constraintStart_toEndOf="@id/booking_plane_seat_info"
+        android:layout_marginEnd="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
