--- a/app/src/main/res/layout/rooms_booking_recyclerview.xml
+++ b/app/src/main/res/layout/rooms_booking_recyclerview.xml
@@ -35,8 +35,7 @@
         android:textSize="20sp"
         android:padding="5sp"
         app:layout_constraintStart_toEndOf="@id/room_size_label"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/booking_room_checkbox"
