--- a/app/src/main/res/drawable/recycler_rounded_corner.xml
+++ b/app/src/main/res/drawable/recycler_rounded_corner.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/recycler_background_color"/>
     <corners
-        android:radius="10sp"/>
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 </shape>
