--- a/app/src/main/res/layout/activity_display_packs.xml
+++ b/app/src/main/res/layout/activity_display_packs.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/activity_background_color">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pack_display_rv"
-        android:layout_width="410dp"
-        android:layout_height="732dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
