--- a/app/src/main/res/layout/activity_pack_details.xml
+++ b/app/src/main/res/layout/activity_pack_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.PackDetails">
+    tools:context=".activity.PackDetails"
+    android:background="@color/activity_background_color">
 
     <TextView
         android:id="@+id/pack_details_pack_name"
@@ -15,7 +16,8 @@
         android:textSize="20sp"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/text_title"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -33,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/pack_description"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/text_color"/>
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,6 +56,7 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/pack_details_show_accommodations_fragment"
                 android:textSize="12sp"
+                android:textColor="@color/text_color"
                 app:layout_constraintStart_toEndOf="@+id/pack_details_show_flights_fragment"
                 app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
 
@@ -63,6 +67,7 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/pack_details_show_activity_fragment"
                 android:textSize="12sp"
+                android:textColor="@color/text_color"
                 app:layout_constraintEnd_toStartOf="@+id/pack_details_show_flights_fragment"
                 app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />
 
@@ -84,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/book_this_pack_button"
+                android:textColor="@color/text_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
