--- a/app/src/main/res/layout/booking_activities_recyclerview.xml
+++ b/app/src/main/res/layout/booking_activities_recyclerview.xml
@@ -20,7 +20,7 @@
         android:id="@+id/booking_activities_activity_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
