--- a/app/src/main/res/layout/display_activities_recyclerview.xml
+++ b/app/src/main/res/layout/display_activities_recyclerview.xml
@@ -1,38 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activities_recycler_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="50sp">
+    android:layout_margin="12sp"
+    android:background="@drawable/recycler_rounded_corner">
 
     <ImageButton
         android:id="@+id/activities_recycler_activity_image"
-        android:layout_width="138dp"
-        android:layout_height="122dp"
-        android:layout_marginLeft="50sp"
-        android:maxWidth="10dp"
-        android:maxHeight="10dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_gravity="center"
+        tools:srcCompat="@tools:sample/avatars"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginEnd="10sp"/>
 
     <TextView
         android:id="@+id/activities_recycler_activity_name"
-        android:layout_width="107dp"
-        android:layout_height="47dp"
-        android:text="activity name" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="12sp"
+        android:text="activity name"
+        android:textSize="22sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/text_title"/>
 
     <TextView
         android:id="@+id/activities_recycler_activity_price"
-        android:layout_width="110dp"
-        android:layout_height="42dp"
-        android:text="activity price" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/activities_recycler_activity_location"
+        android:text="activity price"
+        android:textSize="18sp"
+        android:layout_marginStart="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/text_color"/>
 
     <TextView
         android:id="@+id/activities_recycler_activity_location"
-        android:layout_width="match_parent"
-        android:layout_height="107dp"
-        android:text="ceci est une addresse d'une taille moyenne" />
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:textSize="18dp"
+        android:layout_marginStart="12sp"
+        app:layout_constraintTop_toBottomOf="@id/activities_recycler_activity_name"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="ceci est une addresse d'une taille moyenne"
+        android:textColor="@color/text_color"/>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
