--- a/app/src/main/res/layout/fragment_flight_list_of_pack.xml
+++ b/app/src/main/res/layout/fragment_flight_list_of_pack.xml
@@ -1,76 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".activity.FlightListOfPack">
 
-        <TextView
-            android:id="@+id/flight_details_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/flight_details_title"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:textSize="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/flight_details_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/flight_details_title"
+        android:textColor="@color/text_title"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/fragment_flight_details_outward_journey_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:text="@string/flight_details_going"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/flight_details_title" />
+    <TextView
+        android:id="@+id/fragment_flight_details_outward_journey_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/flight_details_going"
+        android:textColor="@color/text_title"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/fragment_flight_details_outward_journey_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/flight_details_info"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_flight_details_outward_journey_title"
-            android:layout_marginTop="10dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/flight_details_coming_back"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_flight_details_outward_journey_details"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:id="@+id/fragment_flight_details_homeward_journey_title"
-            android:layout_marginTop="16dp"/>
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:id="@+id/fragment_flight_details_homeward_journey_details"
-            android:text="@string/flight_details_info"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_flight_details_homeward_journey_title"/>
-
-    <!--<androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/flight_details_rv"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/outward_flight_details_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_flight_details_title" />-->
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@drawable/recycler_rounded_corner"
+        android:layout_margin="10sp"/>
+
+    <TextView
+        android:id="@+id/fragment_flight_details_homeward_journey_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="@string/flight_details_coming_back"
+        android:textColor="@color/text_title"
+        android:textSize="20sp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/homeward_flight_details_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/recycler_rounded_corner"
+        android:layout_margin="10sp"/>
+</LinearLayout>
