--- a/app/src/main/res/layout/activity_choose_options_for_booking.xml
+++ b/app/src/main/res/layout/activity_choose_options_for_booking.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activity.ChooseOptionsForBooking"
-    android:background="@color/activity_background_color">
+    tools:context=".activity.ChooseOptionsForBooking">
 
     <TextView
         android:id="@+id/choose_options_for_booking_pack_name"
@@ -37,6 +36,7 @@
                     android:hint="@string/pack_booking_nb_travelers"
                     android:inputType="number"
                     android:imeOptions="actionDone"
+                    android:textColor="@color/text_color"
                     android:width="190sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -49,7 +49,6 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textColor="#000000"
                 />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -57,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
-                android:background="@drawable/recycler_rounded_corner"/>
+                android:background="@drawable/activity_item_rounded_corner"/>
 
             <TextView
                 android:id="@+id/book_housing_rooms_title"
@@ -67,14 +66,13 @@
                 android:textSize="20sp"
                 android:layout_marginTop="5sp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#000000"/>
+                android:gravity="center" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/book_housing_rooms_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/recycler_rounded_corner"
+                android:background="@drawable/activity_item_rounded_corner"
                 android:layout_marginTop="5sp"/>
 
             <TextView
@@ -85,14 +83,13 @@
                 android:layout_marginTop="5sp"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#000000"/>
+                android:gravity="center" />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/book_paying_activities_rv"
                 android:layout_marginTop="5sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/recycler_rounded_corner"/>
+                android:background="@drawable/activity_item_rounded_corner"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
