--- a/app/src/main/res/drawable/activity_item_rounded_corner.xml
+++ b/app/src/main/res/drawable/activity_item_rounded_corner.xml
@@ -6,4 +6,5 @@
         android:bottomRightRadius="10dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"/>
+    <stroke android:width="1dp" android:color="#66757F" />
 </shape>
