--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,14 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="mainColor">#E0D3BD</color>
-    <color name="secondaryColor">#E0D3BD</color>
+    <color name="mainColor">#292F33</color>
+    <color name="secondaryColor">#55ACEE</color>
     <color name="borderColor">#000000</color>
-    <color name="recycler_background_color">#FFFFFF</color>
-    <color name="activity_background_color">#EBEBEB</color>
-    <color name="text_title">#252525</color>
-    <color name="text_color">#252525</color>
+    <color name="black">#000000</color>
+    <color name="recycler_background_color">#292F33</color>
+    <color name="activity_background_color">#292F33</color>
+    <color name="text_title">#FFFFFF</color>
+    <color name="text_color">#FFFFFF</color>
+    <color name="text_info">#66757F</color>
+    <color name="button_background_color">#55ACEE</color>
 </resources>
