--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/recycler_background_color"/>
+    <solid android:color="@color/mainColor"/>
     <corners
-        android:radius="10sp"/>
+        android:radius="10sp" />
 </shape>
