--- a/app/src/main/res/layout/activity_pack_details.xml
+++ b/app/src/main/res/layout/activity_pack_details.xml
@@ -17,12 +17,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/text_title"/>
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/pack_details_pack_name"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="8sp"
+        app:layout_constraintTop_toBottomOf="@+id/pack_details_pack_name">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pack_details_scrollview_constraint_layout"
@@ -89,12 +88,12 @@
                 android:layout_gravity="center"
                 android:text="@string/book_this_pack_button"
                 android:textColor="@color/text_color"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="65dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
+                android:layout_marginBottom="50sp"
+                android:layout_marginTop="8sp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
