--- a/app/src/main/res/layout/fragment_home_booking_options.xml
+++ b/app/src/main/res/layout/fragment_home_booking_options.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:weightSum="100"
-    tools:context=".activity.ChooseOptionsForBooking">
+    android:weightSum="100">
 
     <TextView
         android:id="@+id/choose_options_for_booking_pack_name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        android:fontFamily="@font/acme"
+        android:fontFamily="@font/galada"
         android:gravity="center"
         android:text="@string/pack_name"
-        android:textSize="20sp" />
+        android:textSize="22sp"
+        android:background="@drawable/activity_item_squared_corner"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="92">
+        android:layout_weight="92"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +31,8 @@
                 android:id="@+id/text_input_layout_number_travelers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start">
+                android:layout_gravity="start"
+                android:textColorHint="@color/hint_color" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/booking_options_nb_travelers"
@@ -41,7 +41,7 @@
                     android:hint="@string/pack_booking_nb_travelers"
                     android:inputType="number"
                     android:imeOptions="actionDone"
-                    android:textColor="@color/text_color"
+                    android:textColor="@color/hint_color"
                     android:width="190sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
