debut gestion des réservations

--- a/app/src/main/res/layout/fragment_home_booking_options.xml
+++ b/app/src/main/res/layout/fragment_home_booking_options.xml
@@ -89,14 +89,37 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:gravity="center" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/book_paying_activities_rv"
-                android:layout_marginTop="5sp"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/activity_item_rounded_corner"/>
+                android:orientation="vertical"
+                android:layout_marginTop="5sp"
+                android:background="@drawable/activity_item_rounded_corner"
+                android:paddingBottom="4sp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/book_paying_activities_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="13sp"
+                    android:layout_marginTop="5sp"
+                    android:text="@string/booking_activities_general_info"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/add_to_my_bookings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/add_to_my_bookings_button"
+                android:layout_marginTop="8sp"
+                android:layout_marginBottom="20sp"
+                />
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
 </LinearLayout>
